src/App.scss
.App {
  text-align: left;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.section-title {
  font-size: calc(10px + 1.3vmin);
  color: #969696;
  font-weight: 600;
  padding-bottom: 24px;
}

.left-margin-100 {
  margin-left: 100px;
}

.details-block {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
}

.transaction-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  margin-bottom: 3px;

  .description {
    width: 32%;
    display: flex;
    justify-content: flex-start;
  }

  .category {
    width: 25%;
    display: flex;
    justify-content: center;

    > div {
      background-color: #cae1e7;
      border-radius: 30px;
      padding: 5px 16px;
      font-size: 10px;
    }
  }

  .amount {
    width: 25%;
    display: flex;
    justify-content: flex-end;
  }
}

.bordered {
  border: 1px solid lightgrey;
  padding: 8px 15px;
}

.headings {
  color: #969696;
  font-weight: 600;
  margin-bottom: 12px;
  justify-content: space-between;
  padding: 0 16px;
}

.info-block {
  width: 50%;
  min-height: 24px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
}

.info-row {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;

  &.right {
    justify-content: flex-end;
    margin-right: 15px;
  }
}

.info-label {
  padding: 5px 8px 4px 0;
  width: 20%;
}

.info-value {
  font-weight: 600;
}

#search-cell {
  width: 400px;
}

#page-size-filter {
  width: 200px;
}

#account-filter {
  width: 200px;
}

@import '~antd/dist/antd.css';

@media only screen and (max-width: 700px) {
  .details-block {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
  }

  .account-holder-block,
  .customer-data-block,
  .transactions-block {
    padding: 15px;
  }

  .headings,
  #page-size-filter {
    display: none;
  }

  .section-title {
    font-size: 20px;
  }

  #search-cell,
  #account-filter,
  .ant-select,
  .info-value {
    width: 100%;
  }

  .transaction-row {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;

    .category {
      display: none;
    }

    .amount {
      flex-direction: row;
    }

    .description {
      width: 75%;
      flex-direction: column-reverse;

      .date {
        color: darkgray;
        margin-top: 4px;
      }

      .transaction-bullet {
        display: none;
      }
    }
  }

  .info-row {
    flex-direction: row;
    margin-bottom: 5px;

    &.right {
      margin: 0;
    }
  }

  .info-block {
    width: 100%;
  }

  .info-label {
    width: 100%;
  }

  .left-margin-100 {
    margin-left: 0;
  }

  .transaction-row {
    &.bordered {
      border-right: 0;
      border-bottom: 0;
      border-left: 0;
      border-top: 1px solid lightgrey;
      padding: 8px 15px;
      flex-direction: row;
      font-size: 12px;
    }
  }
}

